<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Account">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_create_account"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:textSize="23dp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_names"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:layout_margin="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_phone"
                    android:inputType="phone"
                    android:background="@android:color/transparent"
                    android:layout_margin="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <CheckBox
                android:id="@+id/check_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agree Information"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/str_register"
                android:textAllCaps="false"
                android:textSize="18dp"
                android:background="@drawable/button_design"
                android:padding="5dp"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>