<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewHolder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    android:foreground="?android:selectableItemBackground"
    android:clickable="true"
    app:cardElevation="1dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints">
            <TextView
                android:id="@+id/client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textSize="18dp"
                android:text="Akagera Park"
                android:textStyle="bold"
                android:textColor="@color/purple_700"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/str_phone" />
                <TextView
                    android:id="@+id/client_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="5.1 Km" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/str_fuel_requested" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/client_fuel_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/str_fuel_data" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/str_quart" />
                <TextView
                    android:id="@+id/client_fuel_liter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="5.1 Km" />



            </LinearLayout>


            <TextView
                android:id="@+id/request_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="Pending" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnlNavigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="3dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_place_24"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Navigate"
                android:padding="5dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>
