<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/lnl_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_weight="3">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/flag_eng"
                android:layout_margin="11dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/str_lang_eng"
                android:layout_gravity="center"
                android:layout_weight="1" />
            <RadioButton
                android:visibility="gone"
                android:id="@+id/radio_english_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="9dp"
                android:onClick="onRadioButtonClicked"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnl_kinya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_weight="3">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/flag_rwa"
                android:layout_margin="11dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/str_lang_kinya"
                android:layout_gravity="center"
                android:layout_weight="1" />
            <RadioButton
                android:visibility="gone"
                android:id="@+id/radio_kinyarwanda_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="9dp"
                android:onClick="onRadioButtonClicked"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnl_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_weight="3">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/flag_fre"
                android:layout_margin="11dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/str_lang_fre"
                android:layout_gravity="center"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>